Fix: dark mode colors saturation

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9694,13 +9694,16 @@ body {
 
 body.light {
   --anchorLink: #3a405a;
-  --background: #ffffff;
+  --background: #FBFBFB;
   --textColor: #3a405a;
   --buttonColor: #8c43ff;
+  --wavesColor: #8c43ff;
+  --cardColor: #FFFFF;
+  --cardText: var(--textColor);
   color: var(--textColor);
   background-color: var(--background);
   --boxShadow: rgba(153, 153, 153, 0.5);
-  --navBackground: #ffffff;
+  --navBackground: #FBFBFB;
   --contactBackground: #3a405a;
 }
 
@@ -9708,13 +9711,16 @@ body.dark {
   -webkit-font-smoothing: antialiased;
   --anchorLink: #e3b23c;
   --background: #3a405a;
-  --textColor: white;
-  --buttonColor: #924dff;
+  --textColor: #FBFBFB;
+  --buttonColor: #bb8fff;
+  --wavesColor: #282c3b;
+  --cardColor: #282c3b;
+  --cardText: #F4F3F1;
   color: var(--textColor);
   background-color: var(--background);
   --boxShadow: none;
   --navBackground: #2f3449;
-  --contactBackground: #6A23DF;
+  --contactBackground: #FBFBFB;
 }
 
 svg {
@@ -11494,7 +11500,7 @@ pre {
 }
 
 .wave-img path {
-  fill: var(--buttonColor) !important;
+  fill: var(--wavesColor) !important;
 }
 
 .waves {
@@ -11516,13 +11522,13 @@ pre {
 }
 
 .waves .image-block svg path {
-  fill: var(--buttonColor) !important;
+  fill: var(--wavesColor) !important;
 }
 
 .about {
   padding-top: 70px;
   padding-bottom: 70px;
-  background-color: var(--buttonColor);
+  background-color: var(--wavesColor);
 }
 
 .about .icon-transition span {
@@ -11627,7 +11633,7 @@ pre {
 
 .portfolio .card-title {
   letter-spacing: 0.03em;
-  color: var(--textColor);
+  color: var(--cardText);
   font-weight: 700;
   font-size: 1.2rem;
   margin: 0;
@@ -11636,7 +11642,7 @@ pre {
 
 .portfolio .card {
   margin: 2rem;
-  background-color: var(--background);
+  background-color: var(--cardColor);
   border: none;
   border-radius: 20px;
   overflow: hidden;
@@ -11676,7 +11682,7 @@ pre {
 }
 
 .portfolio .card-box > p {
-  color: var(--textColor);
+  color: var(--cardText);
 }
 
 .portfolio .btn {
@@ -11686,7 +11692,7 @@ pre {
 
 .portfolio .mbr-section-title {
   margin: 0;
-  color: var(--textColor);
+  color: var(--cardText);
 }
 
 .portfolio .card-underline {
@@ -11694,7 +11700,7 @@ pre {
   margin-bottom: -0.5rem;
   margin-bottom: 1.5rem;
   margin-top: 0 !important;
-  color: var(--textColor);
+  color: var(--cardText);
 }
 
 .portfolio .card-underline .line {
@@ -11753,19 +11759,19 @@ pre {
 }
 
 .contact h2 {
-  color: #ffffff;
+  color: var(--background);
 }
 
 .contact h3 {
-  color: #ffffff;
+  color: var(--background);
 }
 
 .contact h4 {
-  color: #ffffff;
+  color: var(--background);
 }
 
 .contact p {
-  color: #ffffff;
+  color: var(--background);
 }
 
 .contact form {
