--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -20,13 +20,16 @@ body {
 
 body.light {
     --anchorLink: #3a405a;
-    --background: #ffffff;
+    --background: #FBFBFB;
     --textColor: #3a405a;
     --buttonColor: #8c43ff;
+    --wavesColor: #8c43ff;
+    --cardColor: #FFFFF;
+    --cardText: var(--textColor);
     color: var(--textColor);
     background-color: var(--background);
     --boxShadow: rgba(153, 153, 153, 0.5);
-    --navBackground: #ffffff;
+    --navBackground: #FBFBFB;
     --contactBackground: #3a405a;
 }
 
@@ -34,13 +37,16 @@ body.dark {
     -webkit-font-smoothing: antialiased;
     --anchorLink: #e3b23c;
     --background: #3a405a;
-    --textColor: white;
-    --buttonColor: #924dff;
+    --textColor: #FBFBFB;
+    --buttonColor: #bb8fff;
+    --wavesColor: #282c3b;
+    --cardColor: #282c3b;
+    --cardText: #F4F3F1;
     color: var(--textColor);
     background-color: var(--background);
     --boxShadow: none;
     --navBackground: #2f3449;
-    --contactBackground: #6A23DF;
+    --contactBackground: #FBFBFB;
 }
 
 svg {
@@ -401,7 +407,7 @@ header {
 
 .display-7 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 200;
 
     >.mbr-iconfont {
@@ -1937,7 +1943,7 @@ pre {
 
 .wave-img {
     path {
-        fill: var(--buttonColor) !important;
+        fill: var(--wavesColor) !important;
     }
 }
 
@@ -1957,7 +1963,7 @@ pre {
             margin-bottom: -40px;
 
             path {
-                fill: var(--buttonColor) !important;
+                fill: var(--wavesColor) !important;
             }
         }
     }
@@ -1966,7 +1972,7 @@ pre {
 .about {
     padding-top: 70px;
     padding-bottom: 70px;
-    background-color: var(--buttonColor);
+    background-color: var(--wavesColor);
 
     .icon-transition {
         span {
@@ -2074,7 +2080,7 @@ pre {
 
     .card-title {
         letter-spacing: 0.03em;
-        color: var(--textColor);
+        color: var(--cardText);
         font-weight: 700;
         font-size: 1.2rem;
         margin: 0;
@@ -2083,9 +2089,9 @@ pre {
 
     .card {
         margin: 2rem;
-        background-color: var(--background);
+        background-color: var(--cardColor);
         border: none;
-        border-radius: 20px;
+        border-radius: 6px;
         overflow: hidden;
         box-shadow: 2px 8px 20px -6px var(--boxShadow);
         transition: all 0.2s ease-in-out;
@@ -2142,7 +2148,7 @@ pre {
         }
 
         >p {
-            color: var(--textColor);
+            color: var(--cardText);
         }
     }
 
@@ -2153,7 +2159,7 @@ pre {
 
     .mbr-section-title {
         margin: 0;
-        color: var(--textColor);
+        color: var(--cardText);
     }
 
     .card-underline {
@@ -2161,7 +2167,7 @@ pre {
         margin-bottom: -0.5rem;
         margin-bottom: 1.5rem;
         margin-top: 0 !important;
-        color: var(--textColor);
+        color: var(--cardText);
 
         .line {
             width: 3rem;
@@ -2220,19 +2226,19 @@ pre {
     position: relative;
 
     h2 {
-        color: #ffffff;
+        color: var(--background);
     }
 
     h3 {
-        color: #ffffff;
+        color: var(--background);
     }
 
     h4 {
-        color: #ffffff;
+        color: var(--background);
     }
 
     p {
-        color: #ffffff;
+        color: var(--background);
     }
 
     form {
@@ -2244,6 +2250,7 @@ pre {
         opacity: 1;
         z-index: 0;
         padding: 40px;
+        border-radius: 6px;
     }
 
     svg {
